# Copyright (c) 2021-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/lite/config/component/lite_component.gni")

histreamer_foundation_src = [
  "osal/thread/task.cpp",
  "osal/thread/condition_variable.cpp",
  "osal/thread/mutex.cpp",
  "osal/thread/scoped_lock.cpp",
  "osal/thread/thread.cpp",
  "osal/utils/util.cpp",
]

config("histreamer_foundation_config") {
  include_dirs = [
    "//foundation/multimedia/histreamer/engine",
    "//foundation/multimedia/histreamer/engine/foundation",
    "//foundation/multimedia/histreamer/engine/foundation/osal",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//third_party/bounds_checking_function/include",
  ]
  defines = [ "MEDIA_OHOS" ]
}

lite_library("histreamer_foundation") {
  if (ohos_kernel_type == "liteos_m") {
    target_type = "static_library"
  } else {
    target_type = "shared_library"
  }
  sources = histreamer_foundation_src
  public_configs = [ ":histreamer_foundation_config" ]
  public_deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/multimedia/utils/lite:media_common",
  ]
  if (ohos_kernel_type == "liteos_m") {
    public_deps += [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
      "//third_party/bounds_checking_function:libsec_static",
    ]
  } else {
    public_deps += [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
  cflags = [ "-O2" ]
  cflags_cc = cflags
}
